--- a/api/.env
+++ b/api/.env
@@ -34,3 +34,6 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 API_URL=https://www.googleapis.com/books/v1/volumes
 API_URL_MASK=%s?q=%s&startIndex=%s
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
